force-app/main/default/objects/SPEN_VoiceAlert__c/SPEN_VoiceAlert__c.object-meta.xml
<CustomObject>
    <label>Voice Alert</label>
    <nameField>
        <label>Voice Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voice Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>