force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_CalledInTelephone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CalledInTelephone__c</fullName>
    <label>Called In Telephone</label>
    <type>Phone</type>
</CustomField>