force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_CallRecordToSF__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallRecordToSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Record To SF</label>
    <type>Checkbox</type>
</CustomField>