force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRMD-5392</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Alerts</relationshipLabel>
    <relationshipName>Voice_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>