force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_CommunicationScheduler__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommunicationScheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication scheduler</label>
    <referenceTo>SPEN_CommunicationScheduler__c</referenceTo>
    <relationshipLabel>Voice Alerts</relationshipLabel>
    <relationshipName>Voice_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>