force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_ContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Voice Alerts</relationshipLabel>
    <relationshipName>SPEN_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>