force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_Event__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Event__c</fullName>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>