force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Voice Alerts</relationshipLabel>
    <relationshipName>SPEN_VoiceAlertIncident</relationshipName>
    <type>Lookup</type>
</CustomField>