force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_IsProactive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsProactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Proactive</label>
    <type>Checkbox</type>
</CustomField>