force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_IsPSRCustomerFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsPSRCustomerFormula__c</fullName>
    <description>PSR field value from contact</description>
    <formula>SPEN_ContactId__r.SPEN_PSR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPSRCustomer</label>
    <type>Checkbox</type>
</CustomField>