force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_IsSpecificVulnerabilityFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsSpecificVulnerabilityFormula__c</fullName>
    <description>Value based on IsSpecificVulnerability field of Contact</description>
    <formula>SPEN_ContactId__r.SPEN_SpecificVulnerability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSpecificVulnerability</label>
    <type>Checkbox</type>
</CustomField>