force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_MessageHeard__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessageHeard__c</fullName>
    <label>Message Heard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listened</fullName>
            </value>
            <value>
                <fullName>Not Listened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>