force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_SurveyInvitation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyInvitation__c</fullName>
    <label>Survey Invitation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>