force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_SurveyInvitationLink__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyInvitationLink__c</fullName>
    <label>Survey Invitation Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>