force-app/main/default/objects/SPEN_VoiceAlert__c/fields/SPEN_TelephoneNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TelephoneNumberFormula__c</fullName>
    <description>It will store the related contact Customer Telephone</description>
    <formula>SPEN_ContactId__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone Number</label>
    <type>Text</type>
</CustomField>