force-app/main/default/objects/SPEN_VoiceAlert__c/recordTypes/Instant.recordType-meta.xml
<RecordType>
    <fullName>Instant</fullName>
    <active>true</active>
    <label>Instant</label>
</RecordType>