force-app/main/default/objects/SPEN_VoiceAlert__c/recordTypes/schedule.recordType-meta.xml
<RecordType>
    <fullName>schedule</fullName>
    <active>true</active>
    <label>schedule</label>
</RecordType>