force-app/main/default/objects/SPEN_VoiceAlert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_TelephoneNumberFormula__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_ContactId__c</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_CommunicationScheduler__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_MessageHeard__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Voice Alert</label>
</ListView>