force-app/main/default/objects/SPEN_VoiceAlert__c/listViews/Voice_Alert_further_info.listView-meta.xml
<ListView>
    <fullName>Voice_Alert_further_info</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_ContactId__c</columns>
    <columns>SPEN_IsPSRCustomerFormula__c</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_CommunicationScheduler__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_BroadcastMessage__c</columns>
    <columns>SPEN_CallRecordToSF__c</columns>
    <columns>SPEN_CalledInTelephone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_IncidentId__c</field>
        <operation>equals</operation>
        <value>INC-000003050</value>
    </filters>
    <label>Voice Alert - further info</label>
</ListView>